--- a/sentimentanalysis/templates/sentimentanalysis/index.html
+++ b/sentimentanalysis/templates/sentimentanalysis/index.html
@@ -5,15 +5,15 @@
     <title>Sentiment Analysis</title>
 
     <!-- Loads the path to your static files -->
-    {% load staticfiles %}
+    {% load static %}
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy">
-    <link rel="stylesheet" type="text/css" href="{% static 'corpusapp/CSS/bootstrap.min.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'corpusapp/CSS/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'sentimentanalysis/CSS/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'sentimentanalysis/CSS/style.css' %}"/>
 
-    <script src="{% static 'corpusapp/Scripts/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'corpusapp/Scripts/bootstrap.min.js' %}"></script>
-    <script src="{% static 'corpusapp/Scripts/SentimentAnalysisUtils.js' %}"></script>
+    <script src="{% static 'sentimentanalysis/Scripts/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'sentimentanalysis/Scripts/bootstrap.min.js' %}"></script>
+    <script src="{% static 'sentimentanalysis/Scripts/SentimentAnalysisUtils.js' %}"></script>
 
 </head>
 <body>
