--- a/sentimentanalysis/static/sentimentanalysis/CSS/style.css
+++ b/sentimentanalysis/static/sentimentanalysis/CSS/style.css
@@ -1,5 +1,6 @@
+
 body{
-    background: white url("../images/cell.jpg")
+    background: white url("../images/background.png")
 }
 .navbar{
     border-radius: 0;
